--- a/input.scss
+++ b/input.scss
@@ -3,27 +3,37 @@ font-family: "Trifore";
 src: url("webfontkit-20180921-111932/triforce-webfont.woff") format("woff");
 }
 @import url('https://fonts.googleapis.com/css?family=Bellefair|Josefin+Slab:400,700');
+main{
+  background-color: rgb(241,212,144);
+}
 
-h1{
+h1,h2,h3,h4{
   color:red;
   text-align: center;
   font-family: Trifore;
   font-size: 3rem;
 }
 h2{
-  font-family: 'Josefin Slab', serif;
+//  font-family: 'Josefin Slab', serif;
+  display: flex;
+  justify-content: center;
 }
 .jumbotron{
-background-image: url(https://vignette.wikia.nocookie.net/zelda/images/2/2a/Link_Hyrule_Warriors.png/revision/latest?cb=20140620205907);
-background-image: url(https://vignette.wikia.nocookie.net/zelda/images/2/26/Link_Epona_%28Hyrule_Warriors%29.png/revision/latest/scale-to-width-down/350?cb=20140930125513);
+background-color: rgb(76,167,61);
+
+
 }
-img{
-  width:12rem;
-  height: auto;
-}
+
 p{
   font-family: 'Bellefair', serif;
+  font-size: 2rem;
+  color: rgb(136,60,0);
 }
-ol > li{
-  font-family: 'Josefin Slab', serif;
+.issue > p{
+  display:flex;
+  align-items:center;
+}
+footer{
+  background-color: rgb(76,167,61);
+  max-height: 100%;
 }
