--- a/input.scss
+++ b/input.scss
@@ -11,9 +11,7 @@ html,body{
 .navbar{
   background-color: #CA9B29;
 }
-a.btn.btn-secondary{
-  color:blue;
-}
+
 main{
   background-color: rgb(241,212,144);
 }
@@ -28,7 +26,6 @@ h1,h2,h3,h4{
   font-size: 3rem;
 }
 h2{
-//  font-family: 'Josefin Slab', serif;
   display: flex;
   justify-content: center;
 }
@@ -36,26 +33,38 @@ h2{
 background-color: rgb(76,167,61);
 }
 
+
 p{
   font-family: 'Bellefair', serif;
   font-size: 2rem;
   color: rgb(136,60,0);
+
 }
 .issue{
-    border:2px rgb(136,60,0) solid;
-    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
 }
 .issue > p{
   display:flex;
   align-items:center;
   border-radius: 5px;
 }
-.row{
-  max-width:100%;
+
+
+p{
+  text-align: center;
+  .btn-lg{
+    width: 100%;
+    height: auto;
+  }
 }
+
 
 
 footer{
   background-color: rgb(76,167,61);
-  max-height: 100%;
+  height: 100%;
 }
